         paging (as paging is not locked on a write of 0x20 unless the
         secondary port has been written to as well).
20111114 unittests/unittests.c: add Pentagon paging tests.
20111114 unittests/unittests.c: get more test coverage by using
         writeport_internal rather than explicit function calls.
20111114 unittests/unittests.c: add TC2068 paging test.
20111117 unittests/unittests.c: update expected TS2068 contention result after
         TS2068 timing change in libspectrum change r3854.
20111118 unittests/unittests.c: add TC2048 paging test.
20111118 machines/spec_se.c: Spectrum SE does not have 128K-style memory paging
         as "port 0x7ffd" is fully decoded.
20111118 memory.c: assign memory_source_dock and memory_source_exrom.
20111118 unittests/unittests.c: add Spectrum SE paging test.
20111119 unittests/unittests.c: add Scorpion paging test.
20111119 unittests/unittests.c: add 48K NTSC contention/floating bus results.
20111119 machines/specplus3.c: fix all RAM modes (thanks, unittests).
20111119 machines/scorpion.c: fix all RAM mode (thanks, unittests).
20111119 machines/pentagon1024.c: fix all RAM mode (thanks, unittests).
20111120 ui/scaler/scalers.c: remove unused variable (thanks, gcc 4.6).
20111120 machines/{pentagon1024.c,pentagon512.c,scorpion.c,spec128.c,spec16.c,
         spec48.c,specplus3.c,spec_se.c,tc2048.c,tc2068.c,ts2068.c},memory.[ch],
         peripherals/{dck.c,scld.c}: a fairly brute-force removal of the almost
         unnecessary memory_map_{home,dock,exrom} layer. The only thing that
         this makes hard is .dck files containing a "HOME" chunk - will worry
         about that later.
20111121 machines/tc2068.c: start fixing Timex paging.
20111121 machines/{tc2068.c,ts2068.c}: more Timex paging fixes.
20111121 machines/spec_se: mostly fix Spectrum SE paging.
20111121 machines/spec_se.c,memory.[ch],peripherals/scld.c: finish fixing
         Spectrum SE paging.