@@ -3878,3 +3878,4 @@
 20111121 machines/spec_se: mostly fix Spectrum SE paging.
 20111121 machines/spec_se.c,memory.[ch],peripherals/scld.c: finish fixing
          Spectrum SE paging.
+20111121 machines/spec_se.c: ensure Spectrum SE has contended RAM.
